2009-12-08  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_enm.c (nwamui_enm_set_stop_command):
	Fixed 13128 "stop" property is not mandatory for VPN
	* configure.in: Bump 0.99.96.3

2009-12-07  malin  <malin@os>

	* capplet/nwam_condition_vbox.c (table_condition_new),
	(table_line_cache_all_cb), (table_condition_insert),
	(update_condition_row_widgets), (condition_field_op_changed_cb):
	Conditions are not properly shown.
	* common/libnwamui.c
	(nwamui_util_map_object_list_to_condition_strings):
	Fixed only first two conditions can be committed bug.
	* configure.in: Bump 0.99.96.2

2009-12-07  malin  <malin@os>

	* capplet/capplet-utils.c (capplet_compose_combo),
	(capplet_compose_combo_with_model):
	* capplet/capplet-utils.h:
	Updated util functions.
	* capplet/nwam_condition_vbox.c (update_cond_from_row),
	(nwam_condition_vbox_init), (_cu_cond_combo_filter_visible_cb),
	(_cu_cond_combo_new), (table_condition_add_row),
	(table_models_refresh), (table_lines_init),
	(table_get_condition_subject_model),
	(table_get_condition_ncp_list_model), (select_item_with_value),
	(table_condition_new), (table_condition_insert),
	(update_condition_row_widgets), (table_condition_delete),
	(table_add_condition_cb), (table_delete_condition_cb),
	(condition_field_op_changed_cb), (condition_wifi_combo_changed_cb),
	(condition_gobject_combo_changed_cb), (condition_value_changed_cb):
	Support condition include NCP. Clean code.
	Fixed 13033 [RC6]Locations rules contains Current Location
	* capplet/nwam_conn_conf_ip_panel.c (nwam_compose_wifi_fav_view),
	(populate_wifi_fav), (wireless_tab_remove_button_clicked_cb),
	(wireless_tab_up_button_clicked_cb),
	(wireless_tab_down_button_clicked_cb),
	(ipv6_manual_addresses_cb_toggled), (selection_changed):
	Fixed 12915 [RC6] add/edit buttons active for no available wireless
	networks
	* capplet/nwam_conn_stat_panel.c (nwam_compose_tree_view):
	Fixed icon position.
	* capplet/nwam_location_dialog.c (on_button_clicked):