@@ -680,14 +680,14 @@ nwamui_cond_field_to_str( nwamui_cond_field_t field )
 {
     
     switch( field ) {
-        case NWAMUI_COND_FIELD_NCP:          return(_("Active Profiles"));
-        case NWAMUI_COND_FIELD_NCU:          return(_("Active Connections"));
-        case NWAMUI_COND_FIELD_ENM:          return(_("Running VPN Applications"));
-        case NWAMUI_COND_FIELD_LOC:          return(_("Current Location"));
-        case NWAMUI_COND_FIELD_IP_ADDRESS:   return(_("Any IP Address"));
-        case NWAMUI_COND_FIELD_ADV_DOMAIN:   return(_("Any Advertised Domain Name"));
-        case NWAMUI_COND_FIELD_SYS_DOMAIN:   return(_("Any System Domain Name"));
-        case NWAMUI_COND_FIELD_ESSID:        return(_("Wireless Network Name"));
+        case NWAMUI_COND_FIELD_NCP:          return(_("Active network profile"));
+        case NWAMUI_COND_FIELD_NCU:          return(_("Active connections"));
+        case NWAMUI_COND_FIELD_ENM:          return(_("Running VPN applications"));
+        case NWAMUI_COND_FIELD_LOC:          return(_("Current location"));
+        case NWAMUI_COND_FIELD_IP_ADDRESS:   return(_("Any IP address"));
+        case NWAMUI_COND_FIELD_ADV_DOMAIN:   return(_("Any advertised domain name"));
+        case NWAMUI_COND_FIELD_SYS_DOMAIN:   return(_("Any system domain name"));
+        case NWAMUI_COND_FIELD_ESSID:        return(_("Wireless network name"));
         case NWAMUI_COND_FIELD_BSSID:        return(_("Wireless network (BSSID)"));
         default:
             g_assert_not_reached();
